--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@uiw/react-textarea-code-editor": "^2.0.3",
     "antd": "^4.23.1",
+    "cssbeautify": "^0.3.1",
     "next": "12.3.0",
+    "next-remove-imports": "^1.0.7",
+    "pretty": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
